# KusoLang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
__tests__/: .clang-tidy  CMakeLists.txt  Testing.cpp
__tests__/src/: CMakeLists.txt  lexer.tests.cpp  parser.tests.cpp
__tests__/src/parser_tests/: test1.kuso
grammar/: Kuso.g4  lexer_rules.g4  makefile
include/compiler/: compiler.hpp  compiler_exception.hpp
include/emitter/: create_emitter.hpp  emitter.hpp  emitter_asm.hpp
include/generator/: context.hpp  context_pass.hpp  first_pass.hpp  function.hpp  generator.hpp  types.hpp  variables.hpp
include/lexer/: lexer.hpp  token.hpp
include/linux/: linux.hpp
include/logging/: logging.hpp
include/parser/: ast.hpp  parser.hpp
include/setup/: setup.hpp
include/util/: class_types.hpp
include/x64/: addressing.hpp  x64.hpp
include/x86/: addressing.hpp  x86.hpp
src/: CMakeLists.txt  main.cpp
src/compiler/: CMakeLists.txt  compiler.cpp
src/emitter/: CMakeLists.txt  create_emitter.cpp  emitter_asm.cpp  emitter_x86.cpp
src/generator/: CMakeLists.txt  context_pass.cpp  first_pass.cpp  generator.cpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/logging/: CMakeLists.txt  logging.cpp
src/parser/: CMakeLists.txt  ast.cpp  parser.cpp
